finish lab6