@@ -44,15 +44,15 @@ public class AsmBuilder {
                     if (operandNum == 1) {
                         op1 = LLVMGetOperand(inst, 0);
                         if (LLVMIsAConstant(op1) == null)
-                            value_period.get(op1).setSecond(Integer.valueOf(now_line));
+                            value_period.get(op1).setSecond(now_line);
                     }
                     else if (operandNum == 2) {
                         op1 = LLVMGetOperand(inst, 0);
                         op2 = LLVMGetOperand(inst, 1);
                         if (LLVMIsAConstant(op1) == null)
-                            value_period.get(op1).setSecond(Integer.valueOf(now_line));
+                            value_period.get(op1).setSecond(now_line);
                         if (LLVMIsAConstant(op2) == null)
-                            value_period.get(op2).setSecond(Integer.valueOf(now_line));
+                            value_period.get(op2).setSecond(now_line);
                     }
                 }
 //        for (LLVMValueRef v : value_period.keySet())
@@ -100,7 +100,7 @@ public class AsmBuilder {
                      *  System.out.println(LLVMGetValueName(inst).getString()); 得到pointer_b
                      */
                     if (opcode == LLVMAlloca)
-                        stack_pointers.put(inst, Integer.valueOf(count++));
+                        stack_pointers.put(inst, count++);
                     /**
                      *  store i32 3, i32* %c, align 4
                      *  store i32 %tmp_2, i32* @b, align 4
@@ -163,7 +163,7 @@ public class AsmBuilder {
                      *   %b = load i32, i32* %pointer_b, align 4
                      */
                     else if (opcode == LLVMLoad) {
-                        stack_pointers.put(inst, Integer.valueOf(count++));
+                        stack_pointers.put(inst, count++);
                         // 从全局变量中提出数，存在寄存器中
                         if (global_value.contains(op1))
                             asm1op("lw", "a7", LLVMGetValueName(op1).getString());
@@ -183,7 +183,7 @@ public class AsmBuilder {
                         asm1op("mv", used_reg.get(inst), "a7");
                     }
                     else if (opcode == LLVMAdd) {
-                        stack_pointers.put(inst, Integer.valueOf(count++));
+                        stack_pointers.put(inst, count++);
                         if (LLVMIsAConstant(op1) != null) {
                             if (!used_reg.containsKey(op2)) {
                                 String emptyReg = getEmptyReg(now_line);
@@ -222,7 +222,7 @@ public class AsmBuilder {
                         asm1op("mv", used_reg.get(inst), "a6");
                     }
                     else if (opcode == LLVMMul) {
-                        stack_pointers.put(inst, Integer.valueOf(count++));
+                        stack_pointers.put(inst, count++);
                         if (LLVMIsAConstant(op1) != null) {
                             if (!used_reg.containsKey(op2)) {
                                 String emptyReg = getEmptyReg(now_line);
@@ -261,7 +261,7 @@ public class AsmBuilder {
                         asm1op("mv", used_reg.get(inst), "a6");
                     }
                     else if (opcode == LLVMSub) {
-                        stack_pointers.put(inst, Integer.valueOf(count++));
+                        stack_pointers.put(inst, count++);
                         if (LLVMIsAConstant(op1) != null) {
                             if (!used_reg.containsKey(op2)) {
                                 String emptyReg = getEmptyReg(now_line);
@@ -300,7 +300,7 @@ public class AsmBuilder {
                         asm1op("mv", used_reg.get(inst), "a6");
                     }
                     else if (opcode == LLVMSDiv) {
-                        stack_pointers.put(inst, Integer.valueOf(count++));
+                        stack_pointers.put(inst, count++);
                         if (LLVMIsAConstant(op1) != null) {
                             if (!used_reg.containsKey(op2)) {
                                 String emptyReg = getEmptyReg(now_line);
@@ -339,7 +339,7 @@ public class AsmBuilder {
                         asm1op("mv", used_reg.get(inst), "a6");
                     }
                     else if (opcode == LLVMSRem) {
-                        stack_pointers.put(inst, Integer.valueOf(count++));
+                        stack_pointers.put(inst, count++);
                         if (LLVMIsAConstant(op1) != null) {
                             if (!used_reg.containsKey(op2)) {
                                 String emptyReg = getEmptyReg(now_line);
@@ -419,7 +419,7 @@ public class AsmBuilder {
 
     private static String getEmptyReg(int now_line) {
         if (!empty_reg.isEmpty())
-            return empty_reg.remove(0);
+            return empty_reg.removeFirst();
         else {
             for (LLVMValueRef llvmValueRef : used_reg.keySet()) {
                 if (value_period.get(llvmValueRef).getSecond() < now_line) {
